# SensorUtils

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
api/: Sensor.h  SensorModel.h  SensorModelFactory.h  ShapeModelFactory.h
cmake/: gtest.cmake
include/: CSMSensorModel.h  SensorMath.h
include/sensorutils/: SensorUtils.h
recipes/: meta.yaml
src/: SensorUtils.cpp
src/sensorcore/: Sensor.cpp
src/sensormath/: SensorMath.cpp
src/sensormodel/: CSMSensorModel.cpp  SensorModelFactory.cpp
src/shapemodel/: ShapeModelFactory.cpp
tests/: CMakeLists.txt  SensorMathTesting.cpp  SensorModelTesting.cpp  SensorUtilsTesting.cpp  ShapeModelTesting.cpp  TestMain.cpp  phaseAngleTest.cpp
tests/csm_fixture/: CMakeLists.txt  model.cpp
tests/data/: simpleFramerISD.json
